# reach

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  GETTING_STARTED.md  GLOSSARY.md  PROJECT_STRUCTURE.md  QUICKSTART_ARMS.md  README.md  SKELETON_REVIEW.md  alpha_demo_script.txt  arm_train.py  arm_train_mac.py  eval_model.py  plot_ainex_episode_metrics.py  pyproject.toml  record_demo.py  render_demo.py  render_demo_mac.py  render_model.py  render_model_mac.py  requirements-hpc.txt  requirements.txt  setup.py  show_full_dof.py  test_env.py
assets/: ainex_soccer_README.md
cluster/: run_arms_background.sh  test_monsoon.sh  train_arms_monsoon.sh  train_monsoon.sh
config/: ainex_reach.yaml  ainex_reach_wholebody.yaml  ainex_render.yaml  ainex_walk_to_ball.yaml  arm_cli.py  arm_overrides.yaml  arms.yaml  arms_loader.py  default.yaml  reaching_example.yaml  render_loader.py  render_run.yaml
documentation/: adding_new_arm.md  installer_plan.md  miniIntro.pptx  monsoon_setup.md  system_design.md  teamInventory.docx
envs/: __init__.py  mujoco_arm_env.py
gesture_recognition/: README.md  ainex_gesture_rec_with_res.py  ainex_gesture_recognition.py  gesture_webcam.py  min_run.py  min_run.txt  run_ges_rec_with_res.txt  run_gesture_rec.txt
models/: .gitkeep  arm_scene.xml  ball.xml  floor.xml  z1_arm.xml  z1scene.xml
notebooks/: 01_environment_testing.ipynb  README.md
renders/: render_demo.py  render_demo_mac.py  render_model.py  render_model_mac.py
scripts/: pose_floating_controlpanel_and_dump.py  replay_actiongroup.py  run.py  setup_arms.sh  slurm_train.sh  train.py  (+3 more)
(+178 files in other folders)
